assets/css/enfermedades-style.css
.main__containter--first-content {
    display: flex;
    padding: 80px 24px;
    flex-direction: column;
    align-items: flex-start;
    gap: 56px;
    align-self: stretch;
    background-color: #FBFBFB;
}

.first-content-title--green h1 {
    color: #1F4827;
    font-family: Roboto;
    font-size: 24px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
}

.first-content-paragraphs p {
    flex: 1 0 0;
    color: #000;
    font-family: Roboto;
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
}

.first-content-paragraphs strong {
    flex: 1 0 0;
    color: #000;
    font-family: Roboto;
    font-size: 16px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
}

.main__container--second-content {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
}

.left--box--second-content {
    display: flex;
    padding: 80px 24px;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    gap: 10px;
    align-self: stretch;
    background-color: #252525;
}

.title--second-content {
    flex: 1 0 0;
    color: #F7F9FD;
    font-family: Roboto;
    font-size: 24px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
}

.left--box__text-green {
    color: var(--color-secundario-lima-base, #D3FB58);
    font-family: Roboto;
    font-size: 24px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
}

.right--box--second-content {
    padding: 40px 20px 80px 20px;
    background-color: #fff;
}

.content-boxs--second-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 24px;
}

.cols {
    display: flex;
    background-color: #fff;
}

.box--second-content {
    display: flex;
    padding: 48px 16px;
    margin: 10px;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 8px;
    flex-shrink: 0;
    border-radius: 8px;
    background-color: var(--color-secundario-lima-base, #D3FB58);
}

.box--second-content h5 {
    align-self: stretch;
    color: var(--color-primario-brand-base, #1F4827);
    text-align: center;
    font-family: Roboto;
    font-size: 16px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
}

.main__container--third-content {
    background-color: #F7F9FD;
}

.left--box--second-content,
.right--box--second-content {
    width: 100%;
}

.box--second-content {
    width: 124px;
    height: 124px;
}

.main__container--third-content {
    height: 100%;
    width: 100%;
    display: flex;
    padding: 80px 24px;
    flex-direction: column;
    align-items: flex-start;
    gap: 40px;
    align-self: stretch;
    background-color: #F7F9FD;
}

.title--third-content {
    margin-bottom: 34px;
}

.title--third-content h2 {
    flex: 1 0 0;
    color: var(--color-primario-neutral-900, #000);
    text-align: center;
    font-family: Roboto;
    font-size: 24px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
}

.title--third-content h2 sup {
    font-size: 1.2rem;
}

.container-box--third-content {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    margin-bottom: 14px;
    gap: 16px;
}


.box--third-content {
    display: flex;
    width: 88.14%;
    padding: 2rem 1rem;
    flex-direction: column;
    align-items: center;
    border-radius: 8px;
    background-color: var(--color-primario-brand-base, #1F4827);
    margin-bottom: 10px;

}

.box--title {
    flex: 1 0 0;
    color: var(--color-secundario-lima-base, #D3FB58);
    text-align: center;
    font-family: Roboto;
    font-size: 1.1rem;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
}

.icc__span__subtitle {
    color: var(--color-secundario-lima-base, #D3FB58);
    text-align: center;
    font-family: Roboto;
    font-size: 11px;
    font-style: normal;
    font-weight: 400;

}

.box-paragraph {
    align-self: stretch;
    color: var(--color-primario-neutral-100, #F7F9FD);
    text-align: center;
    font-family: Roboto;
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
}

.box-number {
    flex: 1 0 0;
    color: var(--color-secundario-lima-base, #D3FB58);
    text-align: center;
    font-family: Roboto;
    font-size: 27px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
}

.box-last-paragraph {
    flex: 1 0 0;
    color: var(--color-primario-neutral-100, #F7F9FD);
    text-align: center;
    font-family: Roboto;
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
}

.box-last-paragraph span {
    color: var(--color-secundario-lima-base, #D3FB58);
    text-align: center;
    font-family: Roboto;
    font-size: 18px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
}




@media (min-width: 600px) {
    .main__containter--first-content {
        padding: 90px 45px;
    }

}

@media (min-width: 768px) {
    .box--second-content {
        width: 144px;
        height: 144px;
    }
}

@media (min-width: 992px) {
    .main__containter--first-content {
        padding: 120px 130px;
    }

    .first-content-paragraphs strong,
    .first-content-paragraphs p {
        font-size: 18px;
    }

    .main__containter--first-content h1 {
        font-family: Roboto;
        font-size: 35px;
        font-style: normal;
        font-weight: 700;
        line-height: normal;
    }

    .main__container--second-content {
        flex-direction: row;
        flex-wrap: nowrap;
        height: 500px;
        width: 100%;
    }

    .left--box--second-content {
        display: flex;
        width: 65%;
        height: 500px;
        padding: 10px 90px 10px 138px;
        align-items: center;
        flex-direction: row-reverse;
        gap: 10px;
    }

    .title--second-content {
        font-family: Roboto;
        font-size: 39px;
        font-style: normal;
        font-weight: 700;
        line-height: normal;
    }

    .left--box__text-green {
        font-family: Roboto;
        font-size: 39px;
        font-style: normal;
        font-weight: 700;
        line-height: normal;
    }

    .right--box--second-content {
        padding: 50px 0px 50px 96px;
        width: 633px;
        margin-right: 50px;
    }

    .box--second-content {
        width: 174px;
        height: 174px;
    }

    .title--third-content {
        flex: 1 0 0;
        color: var(--color-primario-neutral-900, #000);
        text-align: center;
        font-family: Roboto;
        margin: 0 auto;
    }

    .title--third-content h2 {
        flex: 1 0 0;
        color: var(--color-primario-neutral-900, #000);
        text-align: center;
        font-family: Roboto;
        font-size: 37px;
        font-style: normal;
        font-weight: 700;
        line-height: normal;
        padding: 0 15%;
    }

    .container-box--third-content {
        margin: 0 auto;
    }

    .box--third-content {
        width: 100%;
        height: 300px;
        max-width: 13rem;
    }

    .box--title {
        text-align: center;
        font-family: Roboto;
        font-size: 1.3rem;
        font-style: normal;
        font-weight: 700;
        line-height: normal;
    }

    .box-paragraph {
        text-align: center;
        font-family: Roboto;
        font-size: 16px;
        font-style: normal;
        font-weight: 400;
        line-height: normal;
    }

    .box-number {
        text-align: center;
        /* Headlines/Desktop/Subtítulo */
        font-family: Roboto;
        font-size: 27px;
        font-style: normal;
        font-weight: 700;
        line-height: normal;
    }

    .box-last-paragraph {
        font-family: Roboto;
        font-size: 16px;
        font-style: normal;
        font-weight: 400;
        line-height: normal;
    }


    .main-container__content__section-question__response {
        padding: 0 10% !important;
    }


}

@media (min-width: 1360px) {
    .main__containter--first-content {
        padding: 80px 150px;
    }

    .main__containter--first-content h1 {
        font-size: 39px;
    }

    .right--box--second-content {
        width: 800px;
    }

    .left--box--second-content {
        width: 55%;
    }
}

